<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context=".fragments.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/tvDetalleGlucosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etGlucosa"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetalleFecha"
            android:hint="Fecha"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetallePeso"
            android:hint="@string/tvPeso"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetalleCarbohidratos"
            android:hint="Carbohidratos"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetalleKm"
            android:hint="@string/Km"/>


</LinearLayout>