<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/principalBlanco"
        android:orientation="vertical"
        android:id="@+id/layoutAñadir">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:text="@string/tvAñadirMedida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:textSize="40dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:textStyle="bold"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_60"
                    app:rowCount="5"
                    app:columnCount="3">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etGlucosa"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_40"
                        android:textStyle="italic"/>

                <EditText
                        android:id="@+id/etGlucosa"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:textSize="@dimen/margin_20"
                        android:layout_height="wrap_content"
                        android:hint=" - "
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/principalNaranja"
                        android:text="@string/mg_dL"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etKilometros"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_marginRight="@dimen/margin_40"
                        android:textStyle="italic"/>

                <EditText
                        android:id="@+id/etKilometros"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_height="wrap_content"
                        android:hint=" - "/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:textColor="@color/principalNaranja"
                        android:text="@string/Km"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etCarbohidratos"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_marginRight="@dimen/margin_40"
                        android:textStyle="italic"/>

                <EditText
                        android:id="@+id/etCarbohidratos"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_height="wrap_content"
                        android:hint=" - "/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:textColor="@color/principalNaranja"
                        android:text="@string/gramos"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etPeso"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_marginRight="@dimen/margin_40"
                        android:textStyle="italic"/>

                <EditText
                        android:id="@+id/etPeso"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_height="wrap_content"
                        android:hint=" - "
                        android:gravity="center"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12"
                        android:textColor="@color/principalNaranja"
                        android:text="@string/tvKg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/etFecha"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_marginRight="@dimen/margin_40"
                        android:textStyle="italic"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_12"
                        android:hint=" - "
                        android:id="@+id/etDia"/>

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/principalBlanco"
                        android:src="@mipmap/calendar_color_25px"
                        android:layout_marginTop="@dimen/margin_12"
                        android:layout_marginLeft="@dimen/margin_12"
                        android:id="@+id/btFecha"/>
            </android.support.v7.widget.GridLayout>
        </ScrollView>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/botonAñadir"
            android:backgroundTint="@color/principalNaranja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@mipmap/ic_chevron_right_circle_white_48dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:scaleType="center"/>

</android.support.design.widget.CoordinatorLayout>