<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="horizontal">

        <TextView
        android:hint="@string/tvFechaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFechaLista"
        android:textSize="18sp"

        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/calendar_peque"
                android:layout_marginLeft="@dimen/margin_40"
                android:minHeight="32dp"
                android:minWidth="150dp"
                android:gravity="center_horizontal|top" />
    </RelativeLayout>


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:id="@+id/cardView"
            android:background="@color/principalAzul"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/margin_40"
                        android:layout_marginLeft="@dimen/margin_12"
                        android:textStyle="bold"
                        android:id="@+id/tvGlucosaLista"
                        android:hint="Glucosa"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/blood_25px"
                        android:text="@string/mg_dL"
                        android:layout_marginRight="219dp"
                        android:layout_centerVertical="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvPesoLista"
                        android:textStyle="bold"
                        android:hint="0"
                        android:textSize="@dimen/margin_20"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="124dp"
                        android:layout_marginTop="11dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Kg"
                        android:textSize="@dimen/margin_20"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="91dp"
                        android:layout_alignTop="@+id/tvPesoLista"
                        android:layout_marginTop="0dp"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/weight_25px"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"/>
            </RelativeLayout>


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:layout_marginLeft="@dimen/margin_12"
                        android:layout_marginBottom="@dimen/margin_12"
                        android:textSize="@dimen/margin_20"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:hint="kilometros"
                        android:id="@+id/tvKmLista"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/heart_25px"
                        android:text="@string/Km"
                        android:layout_alignParentStart="true"
                        android:layout_alignBottom="@+id/tvKmLista"
                        android:layout_marginStart="104dp"
                        android:layout_marginBottom="4dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvCarbohidratosLista"
                        android:hint="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/margin_20"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="124dp"
                        android:layout_marginTop="18dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="gr"
                        android:textSize="@dimen/margin_20"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/carbo_25px"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"/>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>

